--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is the todo application. Here, you can add your daily task as many as you want. To use this, you have to first signup/login."
+      content="This is the notes application. Here, you can add your daily task and notes as many as you want. To use this, you have to first signup/login."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
 
