Add google fonts

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,28 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="This is the notes application. Here, you can add your daily task and notes as many as you want. To use this, you have to first signup/login."
-    />
+      content="This is the notes application. Here, you can add your daily task and notes as many as you want. To use this, you have to first signup/login." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-icon.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika:wght@700&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap"
+      rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap"
+      rel="stylesheet" />
 
     <title>Magic Notes</title>
   </head>
